# de.persosim.driver.linux

./: .gitignore
de.persosim.driver.unix/: CMakeLists.txt  README.md  persoSimConnect.c  reader.conf.in
de.persosim.driver.unix/MacOSX/: Info.plist.in
